--- a/game.css
+++ b/game.css
@@ -1,37 +1,37 @@
 body {
-    background: #FFF0F5;
-}
-
-.weapper {
-    width: 70px;
-    margin: auto;
-    text-align: center;
+  background-color: #FFF0F5;
+  padding: 7% 15%;
 }
 
 h1{
-    text-align: center;
-    margin: 20px;
-    font-size: 6rem;
-    color: rgb(39, 130, 210);
-}
-
-.dice-area {
-    margin: 0px 50px;
-    text-align: center;
-    display: inline-block;
-}
-
-p{
-    font-size: 2.5rem;
-    color: rgb(20, 126, 218);
-
-}
-
-img{
-    width: 320px;
-}
-
-footer{
   text-align: center;
-  font-size: 1rem;
+}
+
+img {
+  width: 35%;
+}
+
+.container{
+  width: 70%;
+  margin: auto;
+  text-align: center;
+
+}
+
+.player1{
+  display: inline-block;
+  text-align: center;
+  width: 30%;
+}
+
+.player2{
+  display: inline-block;
+  text-align: center;
+  width: 30%;
+
+}
+
+.footer{
+  margin-top: 200px;
+  text-align: center;
 }
