--- a/game.css
+++ b/game.css
@@ -8,7 +8,7 @@ h1{
 }
 
 img {
-  width: 35%;
+  width: 50%;
 }
 
 .container{
@@ -31,7 +31,7 @@ img {
 
 }
 
-.footer{
-  margin-top: 200px;
+h4{
+
   text-align: center;
 }
